Use efficient valueOf methods from Java 5, taken from #212.