@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2004, 2005, 2006 Joe Walnes.
- * Copyright (C) 2006, 2007, 2009, 2011, 2014, 2015 XStream Committers.
+ * Copyright (C) 2006, 2007, 2009, 2011, 2014, 2015, 2020 XStream Committers.
  * All rights reserved.
  *
  * The software in this package is published under the terms of the BSD
@@ -85,9 +85,9 @@ public class PathTracker {
             indexMapStack[pointer] = indexMap;
         }
         if (indexMap.containsKey(name)) {
-            indexMap.put(name, new Integer(indexMap.get(name).intValue() + 1));
+            indexMap.put(name, Integer.valueOf(indexMap.get(name).intValue() + 1));
         } else {
-            indexMap.put(name, new Integer(1));
+            indexMap.put(name, Integer.valueOf(1));
         }
         pointer++;
         currentPath = null;
